--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <title>LsfTestFront</title>
   <base href="/">
-
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+  <link rel="stylesheet" href="StripeElements.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
